--- a/jewish-newton/chai-gala.css
+++ b/jewish-newton/chai-gala.css
@@ -68,10 +68,8 @@ td.chabad_text_head img {
 }
 
 #chabad_head .chabad_navigator_bar ul#menu {
-  height: 36px;
-  line-height: 36px;
   margin: 0;
-  padding: 0;
+  padding: 10px;
   position: relative;
   z-index: 2;
   text-align: center;
@@ -82,7 +80,7 @@ td.chabad_text_head img {
   list-style: none;
   z-index: 2;
   display: inline-block;
-  color: #e8d7a0;
+  color: #d0af41;
 }
 
 #chabad_head .chabad_navigator_bar ul li .sub_menu {
@@ -102,6 +100,7 @@ td.chabad_text_head img {
   text-decoration: none;
   color: #e8d7a0;
   text-transform: uppercase;
+  font-size: 22px;
 }
 
 .chabad_navigator_bar ul li a.selected,
@@ -619,4 +618,16 @@ body.mobile div.chabad_left_column .content_page_full,
 body.mobile div.chabad_right_column {
   margin-left: 0;
   margin-right: 0;
+}
+
+
+
+#home-invite {
+  width: 100vw;
+  background: #242420;
+  text-align: center;
+  position: relative;
+  top: -15px;
+  left: -15px;
+  padding: 40px 0;
 }
