Style full content

--- a/jewish-newton/chai-gala.css
+++ b/jewish-newton/chai-gala.css
@@ -189,7 +189,7 @@ div.chabad_right_column {
   padding: 1px;
 }
 
-#chabad_body_content {
+#content_page_full {
   padding-bottom: 15px;
   width: 975px;
   margin: 50px auto 0;
