--- a/jewish-barrington/building.css
+++ b/jewish-barrington/building.css
@@ -1107,12 +1107,12 @@ body.mobile .form-line {
 #id_3 .form-checkbox:after,
 #id_4 .form-checkbox:after,
 #id_5 .form-checkbox:after {
-  content: '\f10c';
+  content: '\f111';
   font-family: FontAwesome;
   background: #f8fbf4;
   font-size: 23px;
   position: relative;
-  color: #f8c17c;
+  color: #c8c8c8;
   bottom: 8px;
   left: -2px;
 }
@@ -1120,7 +1120,7 @@ body.mobile .form-line {
 #id_3 .form-checkbox:checked:after,
 #id_4 .form-checkbox:checked:after,
 #id_5 .form-checkbox:checked:after {
-  content: "\f058";
+  content: "\f192";
   color: #1b5c5f;
 }
 
