--- a/jewish-barrington/building.css
+++ b/jewish-barrington/building.css
@@ -1120,8 +1120,8 @@ body.mobile .form-line {
 #id_3 .form-checkbox:checked:after,
 #id_4 .form-checkbox:checked:after,
 #id_5 .form-checkbox:checked:after {
-  content: "\f192";
-  color: #1b5c5f;
+  content: "\f10c";
+  color: #d0af41;
 }
 
 #cid_3 label,
