--- a/chabad-az/tuition.css
+++ b/chabad-az/tuition.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 /* CSS Document */
 
-@import url('https://fonts.googleapis.com/css?family=Oswald:400,700|Source+Sans+Pro:400,700');
+@import url('https://fonts.googleapis.com/css?family=Fjalla+One|Source+Sans+Pro:400,700');
 
 * {
   font-family: 'Source Sans Pro', sans-serif;
