--- a/chabad-az/tuition.css
+++ b/chabad-az/tuition.css
@@ -1,10 +1,10 @@
 @charset "UTF-8";
 /* CSS Document */
 
-@import url('https://fonts.googleapis.com/css?family=Fjalla+One|Source+Sans+Pro:400,700');
+@import url('https://fonts.googleapis.com/css?family=PT+Serif:400,700|Poppins:400,700');
 
 * {
-  font-family: 'Source Sans Pro', sans-serif;
+  font-family: 'PT Serif', serif;
 }
 
 .co_content_container {
@@ -789,6 +789,7 @@ Image credits: unsplash.com
 .hero h1 {
   font-size: 4em;
   font-weight: normal;
+  font-family: 'Poppins', sans-serif;
   margin: 0;
   padding: 0;
   color: #e4d1af;
