--- a/chabad-az/tuition.css
+++ b/chabad-az/tuition.css
@@ -3,7 +3,7 @@
 
 @import url('https://fonts.googleapis.com/css?family=PT+Serif:400,700|Poppins:400,700');
 
-body {
+body.cco_body {
   font-family: 'PT Serif', serif;
 }
 
